{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 448,
  "lineage": "1ee6cad3-4ddb-6c60-4ae3-35fd5135b85e",
  "resources": [
    {
      "module": "module.authEC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:992382585872:instance/i-0988684815ecfecdb",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0988684815ecfecdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project4keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08e489be5d0667ccf",
            "private_dns": "ip-10-0-9-42.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.9.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06cb8f30886941b21",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012c68ea46247115d",
            "tags": {
              "Name": "auth"
            },
            "tags_all": {
              "Name": "auth"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-083db529ded387aee",
              "sg-0bb96d250637aa75f"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ]
          ],
          "dependencies": [
            "module.authEC2.data.aws_ami.ubuntu",
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.heatingEC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:992382585872:instance/i-069375b8f9955946e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069375b8f9955946e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project4keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a9f440bc561b26d4",
            "private_dns": "ip-10-0-1-45.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.45",
            "public_dns": "ec2-13-41-201-160.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.201.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a08c5ab2d0ee9a2a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f646e4586d0c8de",
            "tags": {
              "Name": "heating"
            },
            "tags_all": {
              "Name": "heating"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03bc03059497f60cd",
              "sg-083db529ded387aee",
              "sg-0bb96d250637aa75f",
              "sg-0ed7dccd5dcfd5161"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ]
          ],
          "dependencies": [
            "module.heatingEC2.data.aws_ami.ubuntu",
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.lightingEC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:992382585872:instance/i-01409c04dead5f5dc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01409c04dead5f5dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project4keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-080183cb4b60c10d0",
            "private_dns": "ip-10-0-0-21.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.21",
            "public_dns": "ec2-18-133-156-178.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.156.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a22da74655a49c4c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f783b03eb6a713f0",
            "tags": {
              "Name": "lighting"
            },
            "tags_all": {
              "Name": "lighting"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03bc03059497f60cd",
              "sg-083db529ded387aee",
              "sg-0bb96d250637aa75f",
              "sg-0ed7dccd5dcfd5161"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ]
          ],
          "dependencies": [
            "module.lightingEC2.data.aws_ami.ubuntu",
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "project_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:loadbalancer/app/un-lb-tf/a78998a5b0f03d32",
            "arn_suffix": "app/un-lb-tf/a78998a5b0f03d32",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-un-lb-tf-1617178162.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:loadbalancer/app/un-lb-tf/a78998a5b0f03d32",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "un-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03bc03059497f60cd",
              "sg-083db529ded387aee",
              "sg-0bb96d250637aa75f",
              "sg-0ed7dccd5dcfd5161"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-012c68ea46247115d"
              },
              {
                "subnet_id": "subnet-04d2c4c3fad035536"
              },
              {
                "subnet_id": "subnet-058b29f9c96ea11e2"
              }
            ],
            "subnets": [
              "subnet-012c68ea46247115d",
              "subnet-04d2c4c3fad035536",
              "subnet-058b29f9c96ea11e2"
            ],
            "vpc_id": "vpc-03d0d0928b798498d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "project_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:loadbalancer/app/un-lb-public-tf/2de3aeedc6658a1d",
            "arn_suffix": "app/un-lb-public-tf/2de3aeedc6658a1d",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "un-lb-public-tf-219273292.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:loadbalancer/app/un-lb-public-tf/2de3aeedc6658a1d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "un-lb-public-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03bc03059497f60cd",
              "sg-083db529ded387aee",
              "sg-0bb96d250637aa75f",
              "sg-0ed7dccd5dcfd5161"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-020efcfafe39a9f07"
              },
              {
                "subnet_id": "subnet-02f646e4586d0c8de"
              },
              {
                "subnet_id": "subnet-0f783b03eb6a713f0"
              }
            ],
            "subnets": [
              "subnet-020efcfafe39a9f07",
              "subnet-02f646e4586d0c8de",
              "subnet-0f783b03eb6a713f0"
            ],
            "vpc_id": "vpc-03d0d0928b798498d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "project_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener/app/un-lb-tf/a78998a5b0f03d32/3eecfee1bc43eec9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-auth-lb-tg/4ebadcbe68e31406",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener/app/un-lb-tf/a78998a5b0f03d32/3eecfee1bc43eec9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:loadbalancer/app/un-lb-tf/a78998a5b0f03d32",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_loadbalancer.aws_lb.project_private",
            "module.public_loadbalancer.aws_lb_target_group.project_auth",
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "project_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener/app/un-lb-public-tf/2de3aeedc6658a1d/dd2a1a4db0da2f77",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-status-lb-tg/c2903766c5035d9d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener/app/un-lb-public-tf/2de3aeedc6658a1d/dd2a1a4db0da2f77",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:loadbalancer/app/un-lb-public-tf/2de3aeedc6658a1d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_loadbalancer.aws_lb.project_public",
            "module.public_loadbalancer.aws_lb_target_group.project_status",
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-auth-lb-tg/4ebadcbe68e31406",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener-rule/app/un-lb-tf/a78998a5b0f03d32/3eecfee1bc43eec9/cde6a4b2aac3b510",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "ip-10-0-9-42.eu-west-2.compute.internal"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/auth"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener-rule/app/un-lb-tf/a78998a5b0f03d32/3eecfee1bc43eec9/cde6a4b2aac3b510",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener/app/un-lb-tf/a78998a5b0f03d32/3eecfee1bc43eec9",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.authEC2.aws_instance.EC2",
            "module.authEC2.data.aws_ami.ubuntu",
            "module.public_loadbalancer.aws_lb.project_private",
            "module.public_loadbalancer.aws_lb_listener.project_private",
            "module.public_loadbalancer.aws_lb_target_group.project_auth",
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-heating-lb-tg/b5859fc0c6dcbb6f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener-rule/app/un-lb-public-tf/2de3aeedc6658a1d/dd2a1a4db0da2f77/706e0068d648a3ef",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "ec2-13-41-201-160.eu-west-2.compute.amazonaws.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener-rule/app/un-lb-public-tf/2de3aeedc6658a1d/dd2a1a4db0da2f77/706e0068d648a3ef",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener/app/un-lb-public-tf/2de3aeedc6658a1d/dd2a1a4db0da2f77",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.heatingEC2.aws_instance.EC2",
            "module.heatingEC2.data.aws_ami.ubuntu",
            "module.public_loadbalancer.aws_lb.project_public",
            "module.public_loadbalancer.aws_lb_listener.project_public",
            "module.public_loadbalancer.aws_lb_target_group.project_heating",
            "module.public_loadbalancer.aws_lb_target_group.project_status",
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-lighting-lb-tg/a97aafe76ff70d61",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener-rule/app/un-lb-public-tf/2de3aeedc6658a1d/dd2a1a4db0da2f77/d80d3c15bef67c8a",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "ec2-18-133-156-178.eu-west-2.compute.amazonaws.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/lights"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener-rule/app/un-lb-public-tf/2de3aeedc6658a1d/dd2a1a4db0da2f77/d80d3c15bef67c8a",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener/app/un-lb-public-tf/2de3aeedc6658a1d/dd2a1a4db0da2f77",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lightingEC2.aws_instance.EC2",
            "module.lightingEC2.data.aws_ami.ubuntu",
            "module.public_loadbalancer.aws_lb.project_public",
            "module.public_loadbalancer.aws_lb_listener.project_public",
            "module.public_loadbalancer.aws_lb_target_group.project_lighting",
            "module.public_loadbalancer.aws_lb_target_group.project_status",
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-status-lb-tg/c2903766c5035d9d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener-rule/app/un-lb-public-tf/2de3aeedc6658a1d/dd2a1a4db0da2f77/8281fc029bbeadb3",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "ec2-35-176-97-177.eu-west-2.compute.amazonaws.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/status"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener-rule/app/un-lb-public-tf/2de3aeedc6658a1d/dd2a1a4db0da2f77/8281fc029bbeadb3",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:listener/app/un-lb-public-tf/2de3aeedc6658a1d/dd2a1a4db0da2f77",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_loadbalancer.aws_lb.project_public",
            "module.public_loadbalancer.aws_lb_listener.project_public",
            "module.public_loadbalancer.aws_lb_target_group.project_status",
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.statusEC2.aws_instance.EC2",
            "module.statusEC2.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "project_auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-auth-lb-tg/4ebadcbe68e31406",
            "arn_suffix": "targetgroup/tf-project-auth-lb-tg/4ebadcbe68e31406",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-auth-lb-tg/4ebadcbe68e31406",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-project-auth-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "project_heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-heating-lb-tg/b5859fc0c6dcbb6f",
            "arn_suffix": "targetgroup/tf-project-heating-lb-tg/b5859fc0c6dcbb6f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/heating/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-heating-lb-tg/b5859fc0c6dcbb6f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:992382585872:loadbalancer/app/un-lb-public-tf/2de3aeedc6658a1d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-project-heating-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "project_lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-lighting-lb-tg/a97aafe76ff70d61",
            "arn_suffix": "targetgroup/tf-project-lighting-lb-tg/a97aafe76ff70d61",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/lights/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-lighting-lb-tg/a97aafe76ff70d61",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:992382585872:loadbalancer/app/un-lb-public-tf/2de3aeedc6658a1d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-project-lighting-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "project_status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-status-lb-tg/c2903766c5035d9d",
            "arn_suffix": "targetgroup/tf-project-status-lb-tg/c2903766c5035d9d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-status-lb-tg/c2903766c5035d9d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:992382585872:loadbalancer/app/un-lb-public-tf/2de3aeedc6658a1d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-project-status-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "project_auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-auth-lb-tg/4ebadcbe68e31406-20240307235545300200000001",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-auth-lb-tg/4ebadcbe68e31406",
            "target_id": "i-0988684815ecfecdb"
          },
          "dependencies": [
            "module.authEC2.aws_instance.EC2",
            "module.authEC2.data.aws_ami.ubuntu",
            "module.public_loadbalancer.aws_lb_target_group.project_auth",
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "project_heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-heating-lb-tg/b5859fc0c6dcbb6f-20240307233700223500000003",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-heating-lb-tg/b5859fc0c6dcbb6f",
            "target_id": "i-069375b8f9955946e"
          },
          "dependencies": [
            "module.heatingEC2.aws_instance.EC2",
            "module.heatingEC2.data.aws_ami.ubuntu",
            "module.public_loadbalancer.aws_lb_target_group.project_heating",
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "project_lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-lighting-lb-tg/a97aafe76ff70d61-20240307233659678800000001",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-lighting-lb-tg/a97aafe76ff70d61",
            "target_id": "i-01409c04dead5f5dc"
          },
          "dependencies": [
            "module.lightingEC2.aws_instance.EC2",
            "module.lightingEC2.data.aws_ami.ubuntu",
            "module.public_loadbalancer.aws_lb_target_group.project_lighting",
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "project_status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-status-lb-tg/c2903766c5035d9d-20240307233700118500000002",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:992382585872:targetgroup/tf-project-status-lb-tg/c2903766c5035d9d",
            "target_id": "i-0e309768e50f73521"
          },
          "dependencies": [
            "module.public_loadbalancer.aws_lb_target_group.project_status",
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.statusEC2.aws_instance.EC2",
            "module.statusEC2.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:security-group/sg-0bb96d250637aa75f",
            "description": "Project security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb96d250637aa75f",
            "ingress": [],
            "name": "project_private_egress",
            "name_prefix": "",
            "owner_id": "992382585872",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_private_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:security-group/sg-083db529ded387aee",
            "description": "Project security group",
            "egress": [],
            "id": "sg-083db529ded387aee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "project_private_ingress",
            "name_prefix": "",
            "owner_id": "992382585872",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_public_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:security-group/sg-03bc03059497f60cd",
            "description": "Project security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-03bc03059497f60cd",
            "ingress": [],
            "name": "project_public_egress",
            "name_prefix": "",
            "owner_id": "992382585872",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_public_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:security-group/sg-0ed7dccd5dcfd5161",
            "description": "Project security group",
            "egress": [],
            "id": "sg-0ed7dccd5dcfd5161",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "project_public_ingress",
            "name_prefix": "",
            "owner_id": "992382585872",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "project_private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2436489250",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bb96d250637aa75f",
            "security_group_rule_id": "sgr-033bc622eaaf0b768",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.project_private_egress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "project_private_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2548503317",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-083db529ded387aee",
            "security_group_rule_id": "sgr-04b2beaba664369fa",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.project_private_ingress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "project_public_egress2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-567532827",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03bc03059497f60cd",
            "security_group_rule_id": "sgr-0c078a141d87c5b2f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.project_public_egress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "project_public_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:security-group-rule/sgr-0d6d8a840e1059300",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0d6d8a840e1059300",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03bc03059497f60cd",
            "security_group_rule_id": "sgr-0d6d8a840e1059300",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.project_public_egress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "project_custom_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:security-group-rule/sgr-077a952e750b0718a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-077a952e750b0718a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ed7dccd5dcfd5161",
            "security_group_rule_id": "sgr-077a952e750b0718a",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "project_private_custom_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:security-group-rule/sgr-02ece7b87e4b616f8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-02ece7b87e4b616f8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-083db529ded387aee",
            "security_group_rule_id": "sgr-02ece7b87e4b616f8",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.project_private_ingress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "project_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:security-group-rule/sgr-0ceccafacabb5f449",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ceccafacabb5f449",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ed7dccd5dcfd5161",
            "security_group_rule_id": "sgr-0ceccafacabb5f449",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "project_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:security-group-rule/sgr-0020be95859a706fa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0020be95859a706fa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ed7dccd5dcfd5161",
            "security_group_rule_id": "sgr-0020be95859a706fa",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.project_public_ingress",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.statusEC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:992382585872:instance/i-0e309768e50f73521",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e309768e50f73521",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project4keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0875699bc1ad917e8",
            "private_dns": "ip-10-0-2-249.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.249",
            "public_dns": "ec2-35-176-97-177.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.97.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06d27169a26d38da3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020efcfafe39a9f07",
            "tags": {
              "Name": "status"
            },
            "tags_all": {
              "Name": "status"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03bc03059497f60cd",
              "sg-083db529ded387aee",
              "sg-0bb96d250637aa75f",
              "sg-0ed7dccd5dcfd5161"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ]
          ],
          "dependencies": [
            "module.security.aws_security_group.project_private_egress",
            "module.security.aws_security_group.project_private_ingress",
            "module.security.aws_security_group.project_public_egress",
            "module.security.aws_security_group.project_public_ingress",
            "module.statusEC2.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e726b33816c16ac",
            "association_id": "eipassoc-07663120c94e74d9d",
            "domain": "vpc",
            "id": "eipalloc-00e726b33816c16ac",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0ded954d84e061625",
            "private_dns": "ip-10-0-0-59.eu-west-2.compute.internal",
            "private_ip": "10.0.0.59",
            "public_dns": "ec2-18-130-25-116.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.25.116",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "private_eip_project_vpc"
            },
            "tags_all": {
              "Name": "private_eip_project_vpc"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:internet-gateway/igw-0566a86a4dfabe3f3",
            "id": "igw-0566a86a4dfabe3f3",
            "owner_id": "992382585872",
            "tags": {
              "Name": "project_vpc-igw"
            },
            "tags_all": {
              "Name": "project_vpc-igw"
            },
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e726b33816c16ac",
            "association_id": "eipassoc-07663120c94e74d9d",
            "connectivity_type": "public",
            "id": "nat-09e674a2102584ece",
            "network_interface_id": "eni-0ded954d84e061625",
            "private_ip": "10.0.0.59",
            "public_ip": "18.130.25.116",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f783b03eb6a713f0",
            "tags": {
              "Name": "public_nat_gateway"
            },
            "tags_all": {
              "Name": "public_nat_gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:route-table/rtb-02973cc6d20a3496b",
            "id": "rtb-02973cc6d20a3496b",
            "owner_id": "992382585872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09e674a2102584ece",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privatertproject_vpc"
            },
            "tags_all": {
              "Name": "privatertproject_vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_nat_gateway.public_nat_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:route-table/rtb-0f88f3cb1a58e3662",
            "id": "rtb-0f88f3cb1a58e3662",
            "owner_id": "992382585872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0566a86a4dfabe3f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicrtproject_vpc"
            },
            "tags_all": {
              "Name": "publicrtproject_vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0317bda6048aa3f68",
            "route_table_id": "rtb-02973cc6d20a3496b",
            "subnet_id": "subnet-04d2c4c3fad035536"
          },
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_nat_gateway.public_nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018434ba610c3e1ca",
            "route_table_id": "rtb-02973cc6d20a3496b",
            "subnet_id": "subnet-012c68ea46247115d"
          },
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_nat_gateway.public_nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f084fca807f9eccb",
            "route_table_id": "rtb-02973cc6d20a3496b",
            "subnet_id": "subnet-058b29f9c96ea11e2"
          },
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_nat_gateway.public_nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab0a2f7a166ab041",
            "route_table_id": "rtb-0f88f3cb1a58e3662",
            "subnet_id": "subnet-0f783b03eb6a713f0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009c2c57b61f4b7c8",
            "route_table_id": "rtb-0f88f3cb1a58e3662",
            "subnet_id": "subnet-02f646e4586d0c8de"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a6d383d65bb4654",
            "route_table_id": "rtb-0f88f3cb1a58e3662",
            "subnet_id": "subnet-020efcfafe39a9f07"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:subnet/subnet-04d2c4c3fad035536",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d2c4c3fad035536",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382585872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_vpc-private eu-west-2a"
            },
            "tags_all": {
              "Name": "project_vpc-private eu-west-2a"
            },
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:subnet/subnet-012c68ea46247115d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012c68ea46247115d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382585872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_vpc-private eu-west-2b"
            },
            "tags_all": {
              "Name": "project_vpc-private eu-west-2b"
            },
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:subnet/subnet-058b29f9c96ea11e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058b29f9c96ea11e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382585872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_vpc-private eu-west-2c"
            },
            "tags_all": {
              "Name": "project_vpc-private eu-west-2c"
            },
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:subnet/subnet-0f783b03eb6a713f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f783b03eb6a713f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382585872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_vpc-public eu-west-2a"
            },
            "tags_all": {
              "Name": "project_vpc-public eu-west-2a"
            },
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:subnet/subnet-02f646e4586d0c8de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f646e4586d0c8de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382585872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_vpc-public eu-west-2b"
            },
            "tags_all": {
              "Name": "project_vpc-public eu-west-2b"
            },
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:subnet/subnet-020efcfafe39a9f07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020efcfafe39a9f07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382585872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_vpc-public eu-west-2c"
            },
            "tags_all": {
              "Name": "project_vpc-public eu-west-2c"
            },
            "vpc_id": "vpc-03d0d0928b798498d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382585872:vpc/vpc-03d0d0928b798498d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-01bba4217f4959161",
            "default_route_table_id": "rtb-08285f749ab5ebcbc",
            "default_security_group_id": "sg-0a1c65132cf2b901b",
            "dhcp_options_id": "dopt-0f88eaec6650a62cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d0d0928b798498d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08285f749ab5ebcbc",
            "owner_id": "992382585872",
            "tags": {
              "Name": "project_vpc"
            },
            "tags_all": {
              "Name": "project_vpc"
            }
          }
        }
      ]
    }
  ]
}